--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -18,28 +18,27 @@ node {
         docker rmi --force techierishi/pytodo:latest || true
         '''
     }
-    // stage('Build') {
-    //     sh '''
-    //     pwd
-    //     ls -lrt
-    //     docker login -u $DOCKER_USER -p $DOCKER_PASS
-    //     docker build --rm -t techierishi/pytodo:latest .
-    //     docker push techierishi/pytodo
-    //     docker images
-    //     '''
-    // }
+    stage('Build') {
+        sh '''
+        pwd
+        ls -lrt
+        docker login -u $DOCKER_USER -p $DOCKER_PASS
+        docker build --rm -t techierishi/pytodo:latest .
+        docker push techierishi/pytodo
+        docker images
+        '''
+    }
     stage('Deploy') {
         sh '''
         pwd
         ls -lrt
         kubectl config set-context pytodo-cluster
-        kubectl cluster-info --context pytodo-cluster
 
         kubectl get nodes
 
         kubectl apply -f cicd/yamls/config.yaml
         kubectl apply -f cicd/yamls/webapp.yaml
-
+        sleep 5 
         kubectl get pods
 
         kubectl port-forward service/pytodo-service 5001:5000
